apep_0054/v9/REPLICATION.md
# Replication Package: apep_0168

This folder contains all code and data needed to replicate the analysis.

## Requirements

- Python 3.10+
- Required packages: See below (or `requirements.txt` if present)

```bash
pip install pandas numpy statsmodels matplotlib
```

## Data

Data is fetched from the Census PUMS API (no API key required for basic queries).

**Cached data files:**
- `att_dynamic.rds`
- `att_overall.rds`
- `border_ddd.rds`
- `border_did.rds`
- `border_pairs.rds`
- `cs_result.rds`
- `placebo_twfe.rds`
- `qwi_analysis.rds`
- `qwi_border.rds`
- `qwi_county_sex.rds`
- `results_by_sex.rds`
- `results_table.rds`
- `robustness_table.rds`
- `sa_result.rds`
- `transparency_laws.rds`
- `treatment_data.csv`
- `twfe_never.rds`
- `twfe_no_cawa.rds`
- `twfe_result.rds`

## Code

**Scripts (run in order):**
- `00_packages.R`
- `01_fetch_data.R`
- `01_fetch_qwi_fast.R`
- `01b_fetch_qwi_industry.R`
- `02_clean_data.R`
- `03_main_analysis.R`
- `03b_ddd_analysis.R`
- `04_robustness.R`
- `04b_randomization_inference.R`
- `04c_wild_bootstrap.R`
- `04d_industry_heterogeneity.R`
- `05_figures.R`
- `06_tables.R`

## Replication Instructions

1. Install requirements:
   ```bash
   pip install pandas numpy statsmodels matplotlib
   # For R scripts: install.packages(c("did", "fixest", "ggplot2"))
   ```

2. Run the analysis scripts in order:
   ```bash
   cd code/
   # For Python scripts:
   python 01_fetch_data.py    # Downloads data
   python 02_analysis.py      # Runs main analysis
   python 03_figures.py       # Generates figures
   
   # For R scripts:
   Rscript 01_fetch_data.R
   Rscript 02_analysis.R
   Rscript 03_figures.R
   ```

3. Scripts are numbered in execution order (01_, 02_, etc.).

## Data Source

Census PUMS (Public Use Microdata Sample)
- API: https://api.census.gov/data/{YEAR}/acs/acs1/pums
- Documentation: https://www.census.gov/programs-surveys/acs/microdata.html
- No API key required for basic queries

## Notes

- Scripts may contain hardcoded paths that need adjustment
- Cached JSON files allow replication without re-downloading
- For full replication from scratch, delete JSON files and re-run fetch scripts

---
Generated by APEP publish_paper.py
